# chat-bot

./: .env  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  pyproject.toml
local_development/: docker-compose.yml
notebooks/: client.ipynb  test.ipynb
src/: __init__.py  account.py  agent copy.py  agent.py  chain.py  general.py  graph.py  rag.py
