[tool.poetry]
    name = "chat-bot"
    version = "0.0.1"
    description = "POC chat-bot"
    authors = ["Your Name <you@example.com>"]
    # package-mode = false # uncomment this line with poetry 1.7.2 and remove all above

[tool.poetry.dependencies]
    python = "^3.12"
    fastapi = "^0.109.2"
    pedantic = "^2.1.4"
    uvicorn = "^0.27.1"
    poetry = "^1.7.1"
    loguru = "^0.7.2"
    langchain = {extras = ["all"], version = "^0.1.9"}
    langserve = "^0.0.43"
    sentence-transformers = "^2.4.0"
    qdrant-client = "^1.7.3"
    sse-starlette = "^2.0.0"
    langchain-community = "^0.0.24"
    ipykernel = "^6.29.3"
    requests = "^2.31.0"
    python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
    mypy = "^1.8.0"
    pytest = "^8.0.0"
    ruff = "^0.2.2"
    pre-commit = "^3.6.2"

[tool.mypy]
    warn_return_any = true
    warn_unused_configs = true
    mypy_path = ".venv/bin/python"

[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    line-length = 88
    indent-width = 4
    target-version = "py312"

    [tool.ruff.lint]
        select = ["E4", "E7", "E9", "F", "I", "D"]
        ignore = [
            "D104", # Missing docstring in public package
            "D204", # 1 blank line required after class docstring
            "D212", # Multi-line docstring summary should start at the first line
            "D203", # 1 blank line required before class docstring
            "D202", # No blank lines allowed after function docstring
        ]

        # Allow fix for all enabled rules (when `--fix`) is provided.
        fixable = ["ALL"]
        unfixable = []

    [tool.ruff.format]
        quote-style = "double"
        indent-style = "space"
        skip-magic-trailing-comma = false
        line-ending = "auto"

[tool.pytest]

    cache_dir = ".pytest_cache"
